--- a/bin/com/spendWise/views/SettingsContent.fxml
+++ b/bin/com/spendWise/views/SettingsContent.fxml
@@ -1,55 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TabPane layoutX="10.0" layoutY="7.0" prefHeight="203.0" prefWidth="581.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="10.0" layoutY="6.0" prefHeight="152.0" prefWidth="581.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Change password" style="-fx-background-color: #55DA68;">
+          <Tab style="-fx-background-color: #55DA68;" text="Change password">
                <content>
-                  <Pane prefHeight="166.0" prefWidth="581.0">
+                  <Pane prefHeight="107.0" prefWidth="581.0">
                      <children>
-                        <Text id="newPasswdText" layoutX="77.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New password">
+                        <TextField id="reEnterPasswdField" layoutX="295.0" layoutY="36.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
+                        <Button id="confirmButton" layoutX="193.0" layoutY="79.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
+                        <TextField id="reEnterPasswdField" layoutX="42.0" layoutY="37.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
+                        <Label layoutX="42.0" layoutY="11.0" text="New password">
                            <font>
                               <Font size="15.0" />
                            </font>
-                        </Text>
-                        <Text id="reEnterPasswdText" layoutX="75.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Re-enter password">
+                        </Label>
+                        <Label layoutX="295.0" layoutY="11.0" text="Re-enter password">
                            <font>
                               <Font size="15.0" />
                            </font>
-                        </Text>
-                        <TextField id="newPasswdField" layoutX="272.0" layoutY="38.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2;"/>
-                        <TextField id="reEnterPasswdField" layoutX="274.0" layoutY="80.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2"/>
-                        <Button id="confirmButton" layoutX="185.0" layoutY="128.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
+                        </Label>
                      </children>
                   </Pane>
                </content>
             </Tab>
         </tabs>
       </TabPane>
-      <TabPane layoutX="10.0" layoutY="225.0" prefHeight="162.0" prefWidth="581.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="10.0" layoutY="164.0" prefHeight="97.0" prefWidth="581.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Change Display name" style="-fx-background-color: #55DA68;">
+          <Tab style="-fx-background-color: #55DA68;" text="Change Display name">
                <content>
-                  <Pane prefHeight="200.0" prefWidth="200.0">
+                  <Pane prefHeight="63.0" prefWidth="581.0">
                      <children>
-                        <Text id="newDisplayNameText" layoutX="78.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New display name">
+                        <TextField id="newDisplayNameField" layoutX="187.0" layoutY="17.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
+                        <Button id="confirmButton" layoutX="422.0" layoutY="15.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
+                        <Label layoutX="47.0" layoutY="20.0" text="New display name">
                            <font>
                               <Font size="15.0" />
                            </font>
-                        </Text>
-                        <TextField id="newDisplayNameField" layoutX="268.0" layoutY="34.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2"/>
-                        <Button id="confirmButton" layoutX="184.0" layoutY="82.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="169.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Confirm" />
+                        </Label>
+                     </children>
+                  </Pane>
+               </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+      <TabPane layoutX="10.0" layoutY="279.0" prefHeight="108.0" prefWidth="581.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab style="-fx-background-color: #55DA68;" text="Delete User Account">
+               <content>
+                  <Pane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="50.0" layoutY="28.0" text="Enter password">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <TextField id="reEnterPasswdField" layoutX="189.0" layoutY="24.0" prefHeight="30.0" prefWidth="220.0" style="-fx-background-color:#e2aef2" />
+                        <Button id="confirmButton" layoutX="424.0" layoutY="25.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Delete Account" />
                      </children>
                   </Pane>
                </content>
