--- a/bin/com/spendWise/views/AccountContent.fxml
+++ b/bin/com/spendWise/views/AccountContent.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AccountPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AccountPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="AccountTitleLabel" alignment="CENTER" layoutX="54.0" layoutY="14.0" text="Electricity Expenses Account for the Month of September of 2024">
+      <Label fx:id="AccountTitleLabel" alignment="CENTER" layoutX="54.0" layoutY="14.0" prefWidth="500.0" text="Electricity Expenses Account for the Month of September of 2024" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
@@ -30,17 +32,37 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <SplitMenuButton id="SplitButtonChooseMonth" layoutX="433.0" layoutY="316.0" mnemonicParsing="false" text="Choose Month">
-        <items>
-          <MenuItem mnemonicParsing="false" text="Action 1" />
-          <MenuItem mnemonicParsing="false" text="Action 2" />
-        </items>
-      </SplitMenuButton>
-      <TableView layoutX="58.0" layoutY="51.0" prefHeight="238.0" prefWidth="492.0" style="-fx-background-color: #e6b3ff;">
-        <columns>
-          <TableColumn id="DebitColumn" prefWidth="246.4000244140625" text="Debit" />
-          <TableColumn id="CreditColumn" minWidth="0.0" prefWidth="243.20001220703125" text="Credit" />
-        </columns>
-      </TableView>
+      <TextField fx:id="SelectMonthTextField" layoutX="400.0" layoutY="307.0" promptText="YYYY-MM" />
+      <Button fx:id="SelectMonthButton" layoutX="431.0" layoutY="344.0" mnemonicParsing="false" text="Select Month" />
+      <BorderPane layoutX="50.0" layoutY="49.0" prefHeight="250.0" prefWidth="500.0">
+         <center>
+            <HBox prefHeight="250.0" prefWidth="500.0" BorderPane.alignment="CENTER">
+               <children>
+                  <TableView prefHeight="238.0" prefWidth="250.0" style="-fx-background-color: #e6b3ff;">
+                     <columns>
+                        <TableColumn editable="false" prefWidth="55.0" sortable="false" text="Date" />
+                        <TableColumn editable="false" prefWidth="130.0" sortable="false" text="Description" />
+                        <TableColumn editable="false" minWidth="8.79998779296875" prefWidth="65.0" sortable="false" text="Amount" />
+                     </columns>
+                  </TableView>
+                  <TableView prefHeight="200.0" prefWidth="250.0" style="-fx-background-color: #e6b3ff;">
+                    <columns>
+                      <TableColumn editable="false" prefWidth="55.0" sortable="false" text="Date" />
+                      <TableColumn editable="false" prefWidth="130.0" sortable="false" text="Description" />
+                        <TableColumn editable="false" prefWidth="65.0" sortable="false" text="Amount" />
+                    </columns>
+                  </TableView>
+               </children>
+            </HBox>
+         </center>
+         <top>
+            <HBox prefWidth="500.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label alignment="CENTER" prefWidth="250.0" text="Debit" textAlignment="CENTER" />
+                  <Label alignment="CENTER" focusTraversable="false" prefWidth="250.0" text="Credit" textAlignment="CENTER" />
+               </children>
+            </HBox>
+         </top>
+      </BorderPane>
    </children>
 </AnchorPane>
