--- a/bin/com/spendWise/views/CorrectTransactionError.fxml
+++ b/bin/com/spendWise/views/CorrectTransactionError.fxml
@@ -8,28 +8,27 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="CorrectTransactionErrorPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: BEFFC8;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="CorrectTransactionErrorPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: BEFFC8;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ChoiceBox id="ChiceBoxSelectDebetAccount" layoutX="66.0" layoutY="58.0" prefHeight="35.0" prefWidth="446.0" />
-      <Label id="LabelSelecAccount" layoutX="66.0" layoutY="29.0" text="Select the Account">
+      <ChoiceBox fx:id="ChiceBoxSelectDebetAccount" layoutX="66.0" layoutY="58.0" prefHeight="35.0" prefWidth="446.0" />
+      <Label fx:id="LabelSelecAccount" layoutX="66.0" layoutY="29.0" text="Select the Account">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Text id="TextCashAccount" layoutX="78.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cash Account" wrappingWidth="106.61090087890625" />
-      <Label id="LabelSelectTransactionDate" layoutX="65.0" layoutY="133.0" prefHeight="20.0" prefWidth="222.0" text="Select the Transaction Date">
+      <Text fx:id="TextCashAccount" layoutX="78.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cash Account" wrappingWidth="106.61090087890625" />
+      <Label fx:id="LabelSelectTransactionDate" layoutX="65.0" layoutY="133.0" prefHeight="20.0" prefWidth="222.0" text="Select the Transaction Date">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <DatePicker id="DatePickerSelectTransactionDate" layoutX="65.0" layoutY="164.0" prefHeight="35.0" prefWidth="446.0" />
-      <Text id="TextTransactionDate" layoutX="78.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="08/17/2023" wrappingWidth="106.61090087890625" />
-      <Text id="TextDateType" fill="#636161" layoutX="70.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MM/DD/YYYY" wrappingWidth="106.61090087890625">
+      <DatePicker fx:id="DatePickerSelectTransactionDate" layoutX="65.0" layoutY="164.0" prefHeight="35.0" prefWidth="446.0" />
+      <Text fx:id="TextTransactionDate" layoutX="78.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="08/17/2023" wrappingWidth="106.61090087890625" />
+      <Text fx:id="TextDateType" fill="#636161" layoutX="70.0" layoutY="211.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MM/DD/YYYY" wrappingWidth="106.61090087890625">
          <font>
             <Font size="10.0" />
          </font>
       </Text>
-      <Button id="ButtonSearchTransaction" layoutX="214.0" layoutY="266.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;" text="Search Transaction" />
+      <Button fx:id="ButtonSearchTransaction" layoutX="214.0" layoutY="266.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;" text="Search Transaction" />
    </children>
 </AnchorPane>
