--- a/bin/com/spendWise/views/journalentry.fxml
+++ b/bin/com/spendWise/views/journalentry.fxml
@@ -4,23 +4,23 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.JournalEntryController">
-<VBox spacing="10" alignment="TOP_CENTER">
-    <Label text="General Journal Entry" style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
-    
-    <HBox spacing="5" alignment="CENTER">
-        <Label text="Month:"/>
-        <TextField fx:id="monthTextField" promptText="Enter month"/>
-        <Button text="Show" onAction="#handleShowButtonClick"/>
-    </HBox>
-    
-    <TableView fx:id="journalTable" VBox.vgrow="ALWAYS">
-        <columns>
-            <TableColumn fx:id="transactionIdColumn" text="Transaction ID"/>
-            <TableColumn fx:id="dateColumn" text="Date"/>
-            <TableColumn fx:id="accountIdColumn" text="Account ID"/>
-            <TableColumn fx:id="typeColumn" text="Type"/>
-            <TableColumn fx:id="amountColumn" text="Amount"/>
-        </columns>
-    </TableView>
-</VBox>
+    <VBox spacing="10" alignment="TOP_CENTER" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="39.0" AnchorPane.rightAnchor="39.0">
+        <Label text="General Journal Entry" style="-fx-font-size: 24px; -fx-font-weight: bold;" />
+        
+        <HBox spacing="5" alignment="CENTER">
+            <Label text="Month:" />
+            <TextField fx:id="monthTextField" promptText="Enter month" style="-fx-background-color: #e2aef2;" />
+            <Button text="Show" onAction="#handleShowButtonClick" style="-fx-background-color: #ff9900; -fx-text-fill: white;" />
+        </HBox>
+        
+        <TableView fx:id="journalTable" VBox.vgrow="ALWAYS">
+            <columns>
+                <TableColumn fx:id="transactionIdColumn" text="Transaction ID" prefWidth="120" />
+                <TableColumn fx:id="dateColumn" text="Date" prefWidth="90" />
+                <TableColumn fx:id="accountIdColumn" text="Account ID" prefWidth="120" />
+                <TableColumn fx:id="typeColumn" text="IsCredit" prefWidth="90" />
+                <TableColumn fx:id="amountColumn" text="Amount" prefWidth="100" />
+            </columns>
+        </TableView>
+    </VBox>
 </AnchorPane>
